fix:gap

--- a/css/all.css
+++ b/css/all.css
@@ -46,7 +46,7 @@ h3 {
 
 .all-img {
   object-fit: cover;
-  height: 190px;
+  /* height: 190px; */
   max-height: 200px;
   width: 100%;
 }
@@ -63,7 +63,10 @@ h3 {
   font-weight: 500;
   text-align: center;
   background: white;
-  font-size: min(0.9rem, 1.2rem);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: max(0.6rem, 1rem);
 }
 
 .all-products {
@@ -78,5 +81,15 @@ h3 {
 
 .desc {
   background-color: white;
-  padding-left: 54px;
+  padding-left: 91px;
+}
+
+@media (max-width: 768px) {
+  .desc {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    padding: 0;
+    justify-content: center;
+  }
 }
