--- a/css/formal.css
+++ b/css/formal.css
@@ -78,5 +78,15 @@ h3 {
 
 .desc {
   background-color: white;
-  padding-left: 54px;
+  padding-left: 91px;
+}
+
+@media (max-width: 768px) {
+  .desc {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    padding: 0;
+    justify-content: center;
+  }
 }
