--- a/css/sport.css
+++ b/css/sport.css
@@ -8,13 +8,14 @@
 
 .container {
   padding: 50px 40px;
-  width: 1400px;
+  max-width: 1400px;
   border: 1px solid rgba(128, 128, 128, 0.243);
   border-top: none;
 }
 
 h3 {
   color: rgb(145, 143, 143);
+  text-align: center;
 }
 
 .sports-card {
@@ -71,7 +72,8 @@ h3 {
   margin-top: 35px;
   display: flex;
   width: 100%;
-  gap: 30px;
+  padding: 0;
+  gap: 5px;
   flex-wrap: wrap;
   background-color: white;
   justify-content: center;
@@ -79,5 +81,15 @@ h3 {
 
 .desc {
   background-color: white;
-  padding-left: 54px;
+  padding-left: 91px;
+}
+
+@media (max-width: 768px) {
+  .desc {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    padding: 0;
+    justify-content: center;
+  }
 }
